Update CSVDatabaseManagerTest.java